k8s-cluster-configuration/applications/darling-page/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: darling-page-service
  namespace: darling-page
spec:
  selector:
    app: darling-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
