k8s-cluster-configuration/applications/darling-page/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: darling-page-gateway
  namespace: darling-page
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "darling-a38751b.a2w.io"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: darling-a38751b.a2w.io
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: darling-page-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: darling-page
  namespace: darling-page
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: darling-page-gateway
      namespace: darling-page
  hostnames:
    - darling-a38751b.a2w.io
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: darling-page-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
